# solana-anchor-learn

./: .gitignore  Anchor.toml  FAQ.md  README.md
bak/: spl-token-with-metadata.ts
bak/spl-token-with-metadata/: Cargo.toml
bak/spl-token-with-metadata/src/: lib.rs
counter_anchor/: Anchor.toml  README.md  id.json
counter_anchor/programs/counter_anchor/: Cargo.toml
counter_anchor/tests/: counter_anchor.ts
cpi-before-30/: Anchor.toml  README.md  package.json
cpi-before-30/programs/call-from/: Cargo.toml
cpi-before-30/programs/call-from/src/: lib.rs
cpi-before-30/programs/call_to/: Cargo.toml
cpi-before-30/programs/call_to/src/: lib.rs
cpi-before-30/tests/: cpi-before-30.ts
cross-program-invocation/: Anchor.toml  README.md
cross-program-invocation/idls/: call_to.json
cross-program-invocation/programs/call-from/: Cargo.toml
cross-program-invocation/programs/call-from/src/: lib.rs
cross-program-invocation/programs/call-to/: Cargo.toml
cross-program-invocation/tests/: cross-program-invocation.ts
instruction-patch-demo/: .env  Anchor.toml  README.md  package.json
instruction-patch-demo/cli/: constant.ts
instruction-patch-demo/cli/utils/: common_utils.ts  instruction_utils.ts  tx_utils.ts
instruction-patch-demo/programs/instruction-patch-demo/: Cargo.toml
instruction-patch-demo/programs/instruction-patch-demo/src/: lib.rs  state.rs
instruction-patch-demo/programs/instruction-patch-demo/src/instructions/: change_data.rs  errors.rs  initialize_data.rs  mod.rs
instruction-patch-demo/tests/: instruction-patch-demo.ts
merkle-tree-demo/: Anchor.toml  package.json  pnpm-lock.yaml
merkle-tree-demo/tests/: merkle-tree-demo.ts
merkle-tree-demo/tests/utiils/: balance-tree.ts  (+1 more)
mint-spl-with-program/: Anchor.toml  README.md  package.json
mint-spl-with-program/tests/: mint-spl-with-program.ts  utils.ts
nest_call_solana_program/: package.json  testing.md
nest_call_solana_program/src/: app.controller.spec.ts  app.controller.ts  main.ts
nest_call_solana_program/test/: app.e2e-spec.ts
presale-anchor-demo/: Anchor.toml  README.md  package.json
presale-anchor-demo/programs/presale-anchor-demo/: Cargo.toml
presale-anchor-demo/programs/presale-anchor-demo/src/: constants.rs  errors.rs  lib.rs  state.rs
presale-anchor-demo/programs/presale-anchor-demo/src/instructions/: initialize_presale.rs  mod.rs  pay_to_mint.rs  withdraw_sol.rs
presale-anchor-demo/tests/: presale-anchor-demo.ts  utils.ts
programs/cpi-transfer-sol/: Cargo.toml
programs/cpi-transfer-sol/src/: lib.rs
programs/program-mint-spl/: Cargo.toml  constants.rs  state.rs
programs/program-transfer-sol/: Cargo.toml
programs/program-transfer-sol/src/: lib.rs
spl-token-2022/: Anchor.toml  README.md  package.json
spl-token-2022/tests/: spl-token-2022.ts
spl-token-with-metadata/: README.md  package-lock.json  package.json
spl-token-with-metadata/assets/: metadata.json
spl-token-with-metadata/src/: helper_utils.ts  mint.ts
tests/: counter-anchor.ts  cpi-transfer-sol.ts  presale-anchor-demo.ts  program-mint-spl copy.ts.bak  program-mint-spl.ts  program-transfer-sol.ts  spl-token-2022.ts  utils.ts
transfer-sol-with-cpi/: Anchor.toml  README.md
transfer-sol-with-cpi/programs/transfer-sol-with-cpi/: Cargo.toml
transfer-sol-with-cpi/programs/transfer-sol-with-cpi/src/: lib.rs
transfer-sol-with-cpi/tests/: transfer-sol-with-cpi.ts
transfer-sol-with-program/: Anchor.toml  README.md
transfer-sol-with-program/tests/: transfer-sol-with-program.ts
(+29 files in other folders)
