[package]
name = "presale-anchor-demo"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "presale_anchor_demo"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.29.0" }
fixed = "1.23.1"
half = "=2.2.1"
fixed-sqrt = "0.2.5"
solana-program = "1.16.10"
winnow = "=0.4.1"
toml_datetime = "=0.6.1"
